--- a/app/_contact.html
+++ b/app/_contact.html
@@ -11,7 +11,7 @@
                         <p>Waldstätterstrasse 3 6003 Luzern</p>
                     </div>
                     <div>
-                        <div class="global-item breadcrumbs-article">hre Ansprechperson:</div>
+                        <div class="global-item page-description-article">hre Ansprechperson:</div>
                         <div class="contact-block-left-text">Manuela Allemann (Sekretariat)</div>
                     </div>
                 </div>
@@ -21,7 +21,7 @@
                         <div>E-Mail <a href="malito:info@inaut.ch">info@inaut.ch</a></div>
                     </div>
                     <div>
-                        <div class="global-item breadcrumbs-article">Für schützenswerte Dokumente:</div>
+                        <div class="global-item page-description-article">Für schützenswerte Dokumente:</div>
                         <div>E-Mail <a href="malito:inaut@hin.ch">inaut@hin.ch</a></div>
                     </div>
                 </div>
