--- a/app/_current.html
+++ b/app/_current.html
@@ -1,7 +1,7 @@
-<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
+<main class="main page-description">
+	<div class="container page-description-top">
         <div class="breadcrumbs-item">
-            <div class="global-item breadcrumbs-article">Aktuelles</div>
+            <div class="global-item page-description-article">Aktuelles</div>
         </div>
         <h1 class="text-p">News und Hintergrundinformationen </h1>
         <div class="global-text search-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
