--- a/app/blog-article.html
+++ b/app/blog-article.html
@@ -52,15 +52,15 @@
 		</div>
 	</div>
 </header>
-	<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+	<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="current.html">Aktuelles<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Online-Workshop Webentwicklung</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="global-item breadcrumbs-article">Res Kocher, 20. Mai 2021</div>
+        <div class="page-description-block">
+            <div class="global-item page-description-article">Res Kocher, 20. Mai 2021</div>
         </div>
         <h1 class="coaching-job-title">Online-Workshop Webentwicklung</h1>
         <div class="global-text search-text">Lerne den Beruf Applikationsentwickler/in hautnah kennen. Du würdest gerne vertiefter verstehen, um was es in einer Informatikausbildung geht und ob Applikationsentwicklung die richtige Fachrichtung für dich ist? Du willst dich mit deiner Bewerbung von anderen abheben? Dann ist dies der richtige Kurs für dich - und das Beste: er ist kostenlos!</div>
@@ -119,16 +119,16 @@
                 <li>Serien und Film Junkie</li>
             </ul>
         </div>
-        <div class="breadcrumbs-back blog-article-arows">
-            <div class="breadcrumbs-content">
-                <a class="breadcrumbs-img" href="current.html">
+        <div class="go-block go-block-premature">
+            <div class="go-block-content">
+                <a class="go-block-previous" href="current.html">
                     <img src="img/svg/leftm.svg" alt="img">
                 </a>
-                <div class="breadcrumbs-text">Zurück</div>
+                <div class="go-block-text">Zurück</div>
             </div>
-            <div class="breadcrumbs-content">
-                <div class="breadcrumbs-text">Nächster Artikel</div>
-                <a class="breadcrumbs-img blog-article-arows-right" href="#">
+            <div class="go-block-content">
+                <div class="go-block-text">Nächster Artikel</div>
+                <a class="go-block-previous go-block-next" href="#">
                     <img src="img/svg/ar_right.svg" alt="img">
                 </a>
             </div>
