--- a/app/coaching-job.html
+++ b/app/coaching-job.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+	<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Coaching zum Erhalt eines Arbeitsplatzes</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/kompm.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article">Coaching zum Erhalt eines Arbeitsplatzes</div>
+            <div class="global-item page-description-article">Coaching zum Erhalt eines Arbeitsplatzes</div>
         </div>
-        <h1 class="coaching-job-title">inAut unterstützt Sie und Ihren Arbeitgeber im Arbeitsalltag</h1>
-        <div class="global-text search-text">Sie haben bereits eine passende Anstellung in der Privatwirtschaft, jedoch haben sich in letzter Zeit neue Herausforderungen ergeben, mit denen Sie nicht alleine umgehen können? Haben Sie z.B. einen neuen direkten Vorgesetzten oder vielleicht haben Sie auch erst kürzlich eine Diagnose gestellt bekommen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in mit praktischen Tipps im Arbeitsalltag, sodass Ihre Stelle erhalten werden kann. </div>
+        <h1>inAut unterstützt Sie und Ihren Arbeitgeber im Arbeitsalltag</h1>
+        <div class="global-text page-description-text">Sie haben bereits eine passende Anstellung in der Privatwirtschaft, jedoch haben sich in letzter Zeit neue Herausforderungen ergeben, mit denen Sie nicht alleine umgehen können? Haben Sie z.B. einen neuen direkten Vorgesetzten oder vielleicht haben Sie auch erst kürzlich eine Diagnose gestellt bekommen? inAut unterstützt Sie und Ihre/n Arbeitgeber/in mit praktischen Tipps im Arbeitsalltag, sodass Ihre Stelle erhalten werden kann. </div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -75,12 +75,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
