--- a/app/coaching-training.html
+++ b/app/coaching-training.html
@@ -1,157 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en-us">
-<head>
-	<meta charset="utf-8">
-	<!-- <base href="/"> -->
-
-	<title>Home</title>
-	<meta name="description" content="">
-
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-
-	<!-- Template Basic Images Start -->
-	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="icon" href="img/favicon/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-
-	<!-- Template Basic Images End -->
-
-	<!-- Custom Browsers Color -->
-	<meta name="theme-color" content="#ffffff">
-
-	<!-- Libs -->
-	<link rel="stylesheet" href="libs/fontawesome/css/all.min.css">
-	<link rel="stylesheet" href="libs/swiper/swiper.min.css">
-	<!-- <link rel="stylesheet" href="libs/slick/slick.css"> -->
-
-	<!-- Style -->
-	<link rel="stylesheet" href="css/index.min.css">
-</head>
-<body>
-	<header class="header">
-	<div class="container header-content">
-		<a href="/" class="logo">
-			<img src="img/svg/logo.svg" alt="logo">
-		</a>
-		<div class="header-body">
-			<ul class="menu">
-				<li><a href="offer.html">Angebot</a></li>
-				<li><a href="for-companies.html">Für Unternehmen</a></li>
-				<li><a href="about-us.html">Über uns</a></li>
-				<li><a href="current.html">Aktuelles</a></li>
-				<li><a href="jobs.html">Jobs</a></li>
-				<li><a href="contact.html"> Kontakt</a></li>
-			</ul>
-			<div class="burger d-lg-none">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-	</div>
-</header>
-	<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
-            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
-            <a class="breadcrumbs-link" href="#">Coaching während der Ausbildung</a>
-        </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
-                <img src="img/svg/famm.svg" alt="img">
-            </div>
-            <div class="global-item breadcrumbs-article">Coaching während der Ausbildung</div>
-        </div>
-        <h1>Unterstützung bei der Umsetzung von Ausbilungszielen</h1>
-        <div class="global-text search-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
-    </div>
-    <div class="contact-us">
-		<div class="container">
-			<h3>Kontaktieren Sie uns.</h3>
-			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
-			<a class="home-btn" href="#">ZUm Kontakt</a>
-		</div>
-	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
-                <img src="img/svg/leftm.svg" alt="img">
-            </a>
-            <div class="breadcrumbs-text">Zurück</div>
-        </div>
-    </div>
-</main>
-	<footer class="footer">
-    <div class="footer-content">
-        <div class="container">
-            <div class="row footer-text">
-                <div class="col-12 footer-logo">
-                    <img src="img/svg/logo.svg" alt="img">
-                </div>
-                <div class="col-12 col-sm-3 col-md-4 indent-col">
-                    <a class="footer-adres" target="_blank" href="https://www.google.com/maps/place/inAut+GmbH/@47.0457934,8.3064746,15z/data=!4m5!3m4!1s0x0:0xc406acff6491f092!8m2!3d47.0457934!4d8.3064746">
-                        inAut GmbH Waldstätterstrasse 3 6003 Luzern
-                    </a>
-                </div>
-                <div class="col-12 col-sm-6 col-md-5 indent-col">
-                    <div class="footer-block">
-                        <div>Telefon</div>
-                        <a class="footer-data" href="tel:+41 79 242 53 53">+41 79 242 53 53</a>
-                    </div>
-                    <div class="footer-block">
-                        <div>E-Mail</div>
-                        <a class="footer-data" href="mailto:info@inaut.ch">info@inaut.ch</a>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-3 indent-col footer-menu">
-                    <ul>
-                        <li class="footer-block">
-                            <img src="img/svg/arrows.svg" alt="img">
-                            <a href="offer.html">Angebot</a>
-                        </li>
-                        <li class="footer-block">
-                            <img src="img/svg/arrows.svg" alt="img">
-                            <a href="for-companies.html">Für Unternehmen</a>
-                        </li>
-                        <li class="footer-block">
-                            <img src="img/svg/arrows.svg" alt="img">
-                            <a href="about-us.html">Über uns</a>
-                        </li>
-                        <li class="footer-block">
-                            <img src="img/svg/arrows.svg" alt="img">
-                            <a href="current.html">Aktuelles</a>
-                        </li>
-                        <li class="footer-block">
-                            <img src="img/svg/arrows.svg" alt="img">
-                            <a href="jobs.html">Jobs</a>
-                        </li>
-                        <li class="footer-block">
-                            <img src="img/svg/arrows.svg" alt="img">
-                            <a href="contact.html">Kontakt</a>
-                        </li>
-                    </ul>
-                    <!-- <div class="footer-block">
-                        <img src="img/svg/arrows.svg" alt="img">
-                        <div>Angebot</div>
-                    </div> -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="copyrights">
-        Impressum  |  Datenschutz
-    </div>
-</footer>
-	<script src="libs/jquery/jquery.min.js"></script>
-<!-- <script src="libs/slick/slick.min.js"></script> -->
-<script src="libs/swiper/swiper.min.js"></script>
-<script src="js/main.js"></script>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
@@ -206,148 +52,38 @@
 		</div>
 	</div>
 </header>
-	<main class=main>
-		<!-- Start Page -->
-<div class="container pt-5 pb-5">
-    <ul>
-        <li>
-            <h1>
-                <strong>home</strong>
-            </h1>
-            <a class="general-link" href="home.html">home</a>
-        </li>
-        <li>
-            <span>zum Angebot</span> - <a class="general-link" href="search-of-trial-missions.html">search of trial missions</a>
-        </li>
-        <li>
-            <span>zum Angebot</span> - <a class="general-link" href="job-search.html">job search</a>
-        </li>
-        <li>
-            <span>zum Angebot</span> - <a class="general-link" href="looking-job.html">looking job</a>
-        </li>
-        <li>
-            <span>zum Angebot</span> - <a class="general-link" href="coaching-training.html">coaching training</a>
-        </li>
-        <li>
-            <span>zum Angebot</span> - <a class="general-link" href="professional-clarification.html">professional clarification</a>
-        </li>
-        <li>
-            <span>zum Angebot</span> - <a class="general-link" href="coaching-job.html">coaching job</a>
-        </li>
-        <li>
-            <span>mehr Erfahren</span> - <a class="general-link" href="hire-person.html">hire person</a>
-        </li>
-        <li>
-            <span>mehr Erfahren</span> - <a class="general-link" href="support-in-everyday-work.html">support in everyday work</a>
-        </li>
-        <li>
-            <span>mehr Erfahren</span> - <a class="general-link" href="advanced-training.html">advanced training</a>
-        </li>
-        <li>
-            <span>mehr Erfahren</span> - <a class="general-link" href="blog-article.html">blog article</a>
-        </li>
-        <li>
-           <span>zum Stelleninserat</span> - <a class="general-link" href="job-description.html">job description</a>
-        </li>
-     </ul>
-    <!-- <div class="row">
-        <div class="col-4">
-            <ul>
-                <li class="mb-3">
-                    <h1>
-                        <strong>home</strong>
-                    </h1>
-                    <a class="general-link" href="home.html">home</a>
-                </li>
-                <li class="mb-3">
-                    <h2>
-                        <strong>angebot</strong>
-                    </h2>
-                    <a class="general-link" href="angebot.html">Angebot</a>
-
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="search-of-trial-missions.html">search-of-trial-missions</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="job-search.html">job-search</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="looking-job.html">looking-job</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="coaching-training.html">coaching-training</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="professional-clarification.html">professional-clarification</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="coaching-job.html">coaching-job</a>
-                </li>
-            </ul>
+	<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
+            <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
+            <a class="breadcrumbs-link" href="#">Coaching während der Ausbildung</a>
         </div>
-        <div class="col-4">
-            <ul>
-                <li class="mb-3">
-                    <h2>
-                        <strong>for-companies</strong>
-                    </h2>
-                    <a class="general-link" href="for-companies.html">for-companies</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="hire-person.html">hire-person</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="support-in-everyday-work.html">support-in-everyday-work</a>
-                </li>
-                <li class="mb-3">
-                    <h3>page</h3>
-                    <a class="general-link" href="advanced-training.html">advanced-training</a>
-                </li>
-                <li class="mb-3">
-                    <h2>
-                        <strong>current</strong>
-                    </h2>
-                    <a class="general-link" href="current.html">current</a>
-                </li>
-                <li class="mb-2">
-                    <h3>page</h3>
-                    <a class="general-link" href="blog-article.html">mehr Erfahren</a>
-                </li>
-            </ul>
+        <div class="page-description-block">
+            <div class="page-description-img">
+                <img src="img/svg/famm.svg" alt="img">
+            </div>
+            <div class="global-item page-description-article">Coaching während der Ausbildung</div>
         </div>
-        <div class="col-4">
-            <ul>
-                <li class="mb-3">
-                    <h2>
-                        <strong>jobs</strong>
-                    </h2>
-                    <a class="general-link" href="jobs.html">jobs</a>
-                </li>
-                <li class="mb-3">
-                    <h3>page</h3>
-                    <a class="general-link" href="job-description.html">zum Stelleninserat</a>
-                </li>
-                <li>
-                    <h2>
-                        <strong>contact</strong>
-                    </h2>
-                    <a class="general-link" href="contact.html">contact</a>
-                </li>
-            </ul>
+        <h1>Unterstützung bei der Umsetzung von Ausbilungszielen</h1>
+        <div class="global-text page-description-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
+    </div>
+    <div class="contact-us">
+		<div class="container">
+			<h3>Kontaktieren Sie uns.</h3>
+			<div>Wir unterstützen Sie umfassend und kompetent bei der Berufs- und Arbeitssuche in der Privatwirtschaft.</div>
+			<a class="home-btn" href="#">ZUm Kontakt</a>
+		</div>
+	</div>
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
+                <img src="img/svg/leftm.svg" alt="img">
+            </a>
+            <div class="go-block-text">Zurück</div>
         </div>
-    </div> -->
-</div>
-
-	</main>
+    </div>
+</main>
 	<footer class="footer">
     <div class="footer-content">
         <div class="container">
