--- a/app/job-description.html
+++ b/app/job-description.html
@@ -52,15 +52,15 @@
 		</div>
 	</div>
 </header>
-	<main class="main breadcrumbs">
-	<div class="container job-description-container">
-        <div class="breadcrumbs-way">
+	<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="jobs.html">Jobs<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">IT-Consultantg</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="global-item breadcrumbs-article">Voll-/Teilzeit für Standort Zürich</div>
+        <div class="page-description-block">
+            <div class="global-item page-description-article">Voll-/Teilzeit für Standort Zürich</div>
         </div>
         <h1>IT-Consultant gesucht</h1>
         <div class="global-text search-text">Unsere IT-Fachkräfte profitieren von einer festen Anstellung, Job Coaching und guten Karrieremöglichkeiten. Unsere Kunden profitieren von den ausgeprägten Stärken im Bereich Mustererkennung,
@@ -100,12 +100,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="jobs.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="jobs.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
