--- a/app/job-search.html
+++ b/app/job-search.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+	<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Suche eines Ausbildungsplatzes</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/scoolm.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article">Suche eines Ausbildungsplatzes</div>
+            <div class="global-item page-description-article">Suche eines Ausbildungsplatzes</div>
         </div>
         <h1>Vollumfängliche Unterstützung für den erfolgreichen Lehrabschluss</h1>
-        <div class="global-text search-text">inAut hilft bei der Erstellung des Bewerbungsdossiers, organisiert die für die Ausbildung obligatorischen Tests (z.B. Multi-Check) in einem angepassten Rahmen, akquiriert entsprechende Arbeitgeber und begleitet Sie zu den Vorstellungsgesprächen.</div>
+        <div class="global-text page-description-text">inAut hilft bei der Erstellung des Bewerbungsdossiers, organisiert die für die Ausbildung obligatorischen Tests (z.B. Multi-Check) in einem angepassten Rahmen, akquiriert entsprechende Arbeitgeber und begleitet Sie zu den Vorstellungsgesprächen.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -75,12 +75,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
