--- a/app/_coaching-training.html
+++ b/app/_coaching-training.html
@@ -1,18 +1,18 @@
-<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Coaching während der Ausbildung</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/famm.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article">Coaching während der Ausbildung</div>
+            <div class="global-item page-description-article">Coaching während der Ausbildung</div>
         </div>
         <h1>Unterstützung bei der Umsetzung von Ausbilungszielen</h1>
-        <div class="global-text search-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
+        <div class="global-text page-description-text">Firmen wie auch Klient/innen werden bei der Umsetzung der Ausbildungsziele durch das Fachwissen der inAut Coachs unterstützt. Sollten Schwierigkeiten im Arbeitsalltag auftauchen, steht inAut den Arbeitgeber/innen rasch zur Verfügung und berät hinsichtlich einer für alle zufriedenstellenden Lösung.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -21,12 +21,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
