--- a/app/_hire-person.html
+++ b/app/_hire-person.html
@@ -1,18 +1,18 @@
-<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Für Unternehmen</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/chairmm.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article">Für Unternehmen</div>
+            <div class="global-item page-description-article">Für Unternehmen</div>
         </div>
         <h1>Machen Sie als Firma den entscheidenden Unterschied</h1>
-        <div class="global-text search-text">Wollen Sie Ihr Team leistungsstärker und kreativer machen? Die Stärken einer neurodiversen Person liegen oftmals darin anders zu denken und so auf neue Lösungswege zu kommen. Ebenfalls entdecken neurodiverse Menschen häufiger Lücken und Optimierungspotenzial. Werfen Sie einen Blick auf unsere anonymisierten CV’s oder schreiben Sie hier eine Stellen anonym aus.</div>
+        <div class="global-text page-description-text">Wollen Sie Ihr Team leistungsstärker und kreativer machen? Die Stärken einer neurodiversen Person liegen oftmals darin anders zu denken und so auf neue Lösungswege zu kommen. Ebenfalls entdecken neurodiverse Menschen häufiger Lücken und Optimierungspotenzial. Werfen Sie einen Blick auf unsere anonymisierten CV’s oder schreiben Sie hier eine Stellen anonym aus.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -21,12 +21,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="for-companies.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="for-companies.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
