--- a/app/_looking-job.html
+++ b/app/_looking-job.html
@@ -1,18 +1,18 @@
-<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Suche einer Festanstellung</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/faundm.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article">Suche einer Festanstellung</div>
+            <div class="global-item page-description-article">Suche einer Festanstellung</div>
         </div>
         <h1>Mit der Hilfe von inAut eine langfristige Festanstellung finden</h1>
-        <div class="global-text search-text">InAut hilft bei der Erstellung des Bewerbungsdossiers, akquiriert passende Arbeitgeber und begleitet zu den Vorstellungsgesprächen.</div>
+        <div class="global-text spage-description-text">InAut hilft bei der Erstellung des Bewerbungsdossiers, akquiriert passende Arbeitgeber und begleitet zu den Vorstellungsgesprächen.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -21,12 +21,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
