--- a/app/_professional-clarification.html
+++ b/app/_professional-clarification.html
@@ -1,18 +1,18 @@
-<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="offer.html">Angebot<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#"> Berufliche Abklärung in der Privatwirtschaft </a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/polm.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article"> Berufliche Abklärung in der Privatwirtschaft </div>
+            <div class="global-item page-description-article"> Berufliche Abklärung in der Privatwirtschaft </div>
         </div>
         <h1>Abklärung der Eignung für einen Beruf</h1>
-        <div class="global-text search-text">Ein Schnuppereinsatz von wenigen Tagen zeigt oftmals nicht, ob ein Beruf auch über längere Zeit die richtige Wahl ist. Im Rahmen der beruflichen Abklärung von einem Monat sucht inAut eine Firma in der Privatwirtschaft als Partner und unterstützt Klient/innen und Arbeitgeber/innen bei der Abklärung der Eignung für den Beruf.</div>
+        <div class="global-text page-description-text">Ein Schnuppereinsatz von wenigen Tagen zeigt oftmals nicht, ob ein Beruf auch über längere Zeit die richtige Wahl ist. Im Rahmen der beruflichen Abklärung von einem Monat sucht inAut eine Firma in der Privatwirtschaft als Partner und unterstützt Klient/innen und Arbeitgeber/innen bei der Abklärung der Eignung für den Beruf.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -21,12 +21,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
