--- a/app/_support-in-everyday-work.html
+++ b/app/_support-in-everyday-work.html
@@ -1,18 +1,18 @@
-<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Unterstützung im Arbeitsalltag</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/setim.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article">Unterstützung im Arbeitsalltag</div>
+            <div class="global-item page-description-article">Unterstützung im Arbeitsalltag</div>
         </div>
         <h1>inAut berät Sie und Ihre Firma kompetent und bedarfsgerecht</h1>
-        <div class="global-text search-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
+        <div class="global-text page-description-text">Sie haben eine neurodiverse Person angestellt, merken nun jedoch, dass sich der Arbeitsalltag schwieriger gestaltet als gedacht? Oder haben Sie Mitarbeitende, bei denen erst kürzlich eine Diagnose gestellt wurde? inAut berät Sie kompetent im Arbeitsalltag und kann Sie längerfristig mittels Coaching unterstützen.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
@@ -21,12 +21,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="for-companies.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="for-companies.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
