--- a/app/advanced-training.html
+++ b/app/advanced-training.html
@@ -52,21 +52,21 @@
 		</div>
 	</div>
 </header>
-	<main class="main breadcrumbs">
-	<div class="container breadcrumbs-container">
-        <div class="breadcrumbs-way">
+	<main class="main page-description">
+	<div class="container page-description-top">
+        <div class="breadcrumbs">
             <a class="breadcrumbs-link" href="home.html">Startseite<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="for-companies.html">Für Unternehmen<img src="img/svg/rightm.svg" alt="img"></a>
             <a class="breadcrumbs-link" href="#">Weiterbildung</a>
         </div>
-        <div class="breadcrumbs-item">
-            <div class="breadcrumbs-image">
+        <div class="page-description-block">
+            <div class="page-description-img">
                 <img src="img/svg/icon_schnup.svg" alt="img">
             </div>
-            <div class="global-item breadcrumbs-article">Weiterbildung</div>
+            <div class="global-item page-description-article">Weiterbildung</div>
         </div>
         <h1>Das Thema Neurodiversität vertieft kennenlernen</h1>
-        <div class="global-text search-text">Sie möchten gerne mehr über das Thema Neurodivesität erfahren? Woher stammt der Begriff und was beinhaltet er? Was versteht man unter “Autismus-Spektrum”, “AD(H)S” oder “Tourette-Syndrom” und wie zeigen sich diese Diagnosen bei den Betroffenen? Welche Stärken werden dadurch entfacht und welche Chancen entstehen für die Privatwirtschaft? inAut bietet auf Ihre Bedürfnisse und Interessen zugeschneiderte Weiterbildungsmöglichkeiten an.</div>
+        <div class="global-text page-description-text">Sie möchten gerne mehr über das Thema Neurodivesität erfahren? Woher stammt der Begriff und was beinhaltet er? Was versteht man unter “Autismus-Spektrum”, “AD(H)S” oder “Tourette-Syndrom” und wie zeigen sich diese Diagnosen bei den Betroffenen? Welche Stärken werden dadurch entfacht und welche Chancen entstehen für die Privatwirtschaft? inAut bietet auf Ihre Bedürfnisse und Interessen zugeschneiderte Weiterbildungsmöglichkeiten an.</div>
 
         <div class="line-dec">
             <div class="line-dec-content"></div>
@@ -117,12 +117,12 @@
 			<a class="home-btn" href="#">ZUm Kontakt</a>
 		</div>
 	</div>
-    <div class="container breadcrumbs-back">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
+    <div class="container go-block">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
