--- a/app/contact.html
+++ b/app/contact.html
@@ -91,12 +91,12 @@
         </div>
 
     </div>
-    <div class="container breadcrumbs-back arrow-left-mob">
-        <div class="breadcrumbs-content">
-            <a class="breadcrumbs-img" href="offer.html">
+    <div class="container go-block arrow-left-mob">
+        <div class="go-block-content">
+            <a class="go-block-previous" href="offer.html">
                 <img src="img/svg/leftm.svg" alt="img">
             </a>
-            <div class="breadcrumbs-text">Zurück</div>
+            <div class="go-block-text">Zurück</div>
         </div>
     </div>
 </main>
