--- a/app/current.html
+++ b/app/current.html
@@ -54,7 +54,7 @@
 </header>
 	<main class="main page-description">
 	<div class="container page-description-top">
-        <div class="breadcrumbs-item">
+        <div class="page-description-block">
             <div class="global-item page-description-article">Aktuelles</div>
         </div>
         <h1 class="text-p">News und Hintergrundinformationen </h1>
