--- a/app/_current.html
+++ b/app/_current.html
@@ -1,6 +1,6 @@
 <main class="main page-description">
 	<div class="container page-description-top">
-        <div class="breadcrumbs-item">
+        <div class="page-description-block">
             <div class="global-item page-description-article">Aktuelles</div>
         </div>
         <h1 class="text-p">News und Hintergrundinformationen </h1>
