--- a/app/_current.html
+++ b/app/_current.html
@@ -4,7 +4,7 @@
             <div class="global-item page-description-article">Aktuelles</div>
         </div>
         <h1 class="text-p">News und Hintergrundinformationen </h1>
-        <div class="global-text search-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
+        <div class="global-text page-description-text">Über unser Netzwerk an Organisationen - sowohl in der Privatwirtschaft wie auch im Non-Profit-Sektor - erhalten wir immer wieder spannende Informationen und Hintergründe, die wir gerne mit Ihnen teilen.</div>
         <div class="news text-p">
             <div class="news-left">
                 <img class="news-left-img" src="img/kursaalbern_aussenansicht.png" alt="img">
