--- a/app/_home.html
+++ b/app/_home.html
@@ -136,7 +136,7 @@
 		<div class="container">
 			<div class="home-title current-title">Aktuelles</div>
 			<div class="row">
-				<div class="col-12 col-sm-4 indent-col">
+				<div class="col-12 col-sm-4 indent-col current-box">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Bewerbungsworkshop</h2>
@@ -144,7 +144,7 @@
 						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
-				<div class="col-12 col-sm-4 indent-col">
+				<div class="col-12 col-sm-4 indent-col current-box">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>Online Workshop Web-Entwicklung</h2>
@@ -152,7 +152,7 @@
 						<a class="general-link" href="#">mehr Erfahren</a>
 					</div>
 				</div>
-				<div class="col-12 col-sm-4 indent-col">
+				<div class="col-12 col-sm-4 indent-col current-box">
 					<div class="current-content">
 						<img src="img/svg/frame.svg" alt="img">
 						<h2>2. Nationaler Autismus Kongress</h2>
