--- a/app/_looking-job.html
+++ b/app/_looking-job.html
@@ -12,7 +12,7 @@
             <div class="global-item page-description-article">Suche einer Festanstellung</div>
         </div>
         <h1>Mit der Hilfe von inAut eine langfristige Festanstellung finden</h1>
-        <div class="global-text spage-description-text">InAut hilft bei der Erstellung des Bewerbungsdossiers, akquiriert passende Arbeitgeber und begleitet zu den Vorstellungsgesprächen.</div>
+        <div class="global-text page-description-text">InAut hilft bei der Erstellung des Bewerbungsdossiers, akquiriert passende Arbeitgeber und begleitet zu den Vorstellungsgesprächen.</div>
     </div>
     <div class="contact-us">
 		<div class="container">
